Update reference of script.js file in HTML file

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         <h3>Total: $<span id="total-amount">0.00</span></h3>
     </div>
     </div>
-    <script src="script.js"></script>
-    </body>
+    <script src="./script.js"></script>
+</body>
 </html>
